Languages/kubernetes/YAMLS/kubernetes-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engees11za-kubernetes-app-svc
  namespace: engees11za
  labels:
    env: prod
    svc: 11za-kubernetes-app
spec:
  selector:
    app: 11za-kubernetes-app
  type: ClusterIP
  ports:
    - protocol: TCP
      name: kubeapp
      port: 3100
      targetPort: 3100
